# web-slides-to-pdf

./: .gitignore  README.md  app.py  cli.py  core.py  packages.txt  pyproject.toml  requirements.txt
